banner and icons fixed for mobile to prevent wrapping

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -265,4 +265,29 @@ input[name='q']::placeholder {
     body {
         height: calc(100vh - 116px);
     }
+
+    .display-4.logo-font.text-black {
+        font-size: 2rem;
+    }
+
+    .nav-link {
+        padding: 0.15rem;
+
+    }
+
+    .nav-link i.fa-lg {
+        font-size: 1reml;
+    }
+
+    .navbar-toggler {
+        padding: .6rem .rem;
+        font-size: 1rem;
+      
+    }
+
+    #delivery-banner h4 {
+        font-size: .9rem;
+    }
+
 }
+
